log
Fri, Apr 18, 2025  9:11:51 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:43:11: error: 'HashMap {aka struct HashMap}' has no member named 'key'
     newMap->key
           ^~
hashmap.c:44:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  9:12:06 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:43:11: error: 'HashMap {aka struct HashMap}' has no member named 'key'
     newMap->key;
           ^~
a5b2d79
Fri, Apr 18, 2025  9:15:09 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c309bd9
Fri, Apr 18, 2025  9:18:58 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:44:5: error: statement with no effect [-Werror=unused-value]
     newMap size = 0;
     ^~~~~~
hashmap.c:44:12: error: expected ';' before 'size'
     newMap size = 0;
            ^~~~
hashmap.c:46:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
74f4d01
Fri, Apr 18, 2025  9:19:08 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:44:5: error: statement with no effect [-Werror=unused-value]
     newMap size = 0;
     ^~~~~~
hashmap.c:44:12: error: expected ';' before 'size'
     newMap size = 0;
            ^~~~
hashmap.c:46:5: error: expected ';' before 'return'
     return newMap;
     ^~~~~~
hashmap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
1c1ea4f
Fri, Apr 18, 2025  9:19:21 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:44:5: error: statement with no effect [-Werror=unused-value]
     newMap size = 0;
     ^~~~~~
hashmap.c:44:12: error: expected ';' before 'size'
     newMap size = 0;
            ^~~~
cc1.exe: all warnings being treated as errors
8a069fa
Fri, Apr 18, 2025  9:19:54 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ed30424
Fri, Apr 18, 2025  9:21:11 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:45:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         newMap->current = NULL;
                         ^
cc1.exe: all warnings being treated as errors
a2886ed
Fri, Apr 18, 2025  9:21:26 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
7d333be
Fri, Apr 18, 2025  9:22:28 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
ec69123
Fri, Apr 18, 2025  9:32:29 PM: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:55:62: error: comparison between pointer and integer [-Werror]
     if(map->buckets[posi] == NULL || map->buckets[posi]->key == -1){
                                                              ^~
cc1.exe: all warnings being treated as errors
c76d396
Fri, Apr 18, 2025  9:32:50 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ac23f7c
Fri, Apr 18, 2025  9:34:54 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
24c6167
Fri, Apr 18, 2025  9:35:40 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
069aeea
Fri, Apr 18, 2025  9:35:50 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
672eeb4
Fri, Apr 18, 2025  9:39:50 PM: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|4
total_score: 30/70
7dd29c7
Fri, Apr 18, 2025  9:42:27 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
668985f
Fri, Apr 18, 2025  9:45:14 PM: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:12: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     return posi;
            ^~~~
cc1.exe: all warnings being treated as errors
5aad1b1
Fri, Apr 18, 2025  9:46:40 PM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:13: error: 'return' with no value, in function returning non-void [-Werror]
             return;
             ^~~~~~
hashmap.c:73:8: note: declared here
 Pair * searchMap(HashMap * map,  char * key) {
        ^~~~~~~~~
cc1.exe: all warnings being treated as errors
a622ed2
Fri, Apr 18, 2025  9:46:57 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:13: error: break statement not within loop or switch
             break;
             ^~~~~
2989134
Fri, Apr 18, 2025  9:47:41 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:79:13: error: break statement not within loop or switch
             break;
             ^~~~~
ecc634c
Fri, Apr 18, 2025  9:47:51 PM: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:75:10: error: unused variable 'comprobar' [-Werror=unused-variable]
     long comprobar = posi;
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
c3636be
Fri, Apr 18, 2025  9:48:28 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
389e613
Fri, Apr 18, 2025  9:49:36 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:76:81: error: expected statement before ')' token
     if(map->buckets[posi]->key != NULL || is_equal(map->buckets[posi]->key,key))){
                                                                                 ^
hashmap.c:76:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if(map->buckets[posi]->key != NULL || is_equal(map->buckets[posi]->key,key))){
     ^~
hashmap.c:76:82: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
     if(map->buckets[posi]->key != NULL || is_equal(map->buckets[posi]->key,key))){
                                                                                  ^
cc1.exe: all warnings being treated as errors
bd7bbf0
Fri, Apr 18, 2025  9:49:47 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4d0ec19
Fri, Apr 18, 2025  9:51:07 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
2b4d412
Fri, Apr 18, 2025  9:52:15 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:78:28: error: subscripted value is neither array nor pointer nor vector
         return map->current[posi];
                            ^
a9dad20
Fri, Apr 18, 2025  9:52:29 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
9a707b3
Fri, Apr 18, 2025  9:53:27 PM: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:82:9: error: break statement not within loop or switch
         break;
         ^~~~~
f49d4a8
